# leetcode

./: .gitignore  1002.find-common-characters.cpp  1011.capacity-to-ship-packages-within-d-days.cpp  1018.binary-prefix-divisible-by-5.cpp  1019.next-greater-node-in-linked-list.cpp  1022.sum-of-root-to-leaf-binary-numbers.c  1023.camelcase-matching.c  1046.last-stone-weight.cpp  1078.occurrences-after-bigram.cpp  1080.insufficient-nodes-in-root-to-leaf-paths.cpp  1089.duplicate-zeros.c  1106.parsing-a-boolean-expression.cpp  1109.corporate-flight-bookings.cpp  1110.delete-nodes-and-return-forest.cpp  1146.snapshot-array.cpp  116.populating-next-right-pointers-in-each-node.cpp  1161.maximum-level-sum-of-a-binary-tree.cpp  117.populating-next-right-pointers-in-each-node-ii.cpp  1170.compare-strings-by-frequency-of-the-smallest-character.c  1171.remove-zero-sum-consecutive-nodes-from-linked-list.cpp  1184.distance-between-bus-stops.c  1189.maximum-number-of-balloons.cpp  119.pascals-triangle-ii.c  1190.reverse-substrings-between-each-pair-of-parentheses.cpp  121.best-time-to-buy-and-sell-stock.c  1232.check-if-it-is-a-straight-line.c  1233.remove-sub-folders-from-the-filesystem.cpp  1249.minimum-remove-to-make-valid-parentheses.cpp  126.word-ladder-ii.cpp  1261.find-elements-in-a-contaminated-binary-tree.cpp  1268.search-suggestions-system.cpp  127.word-ladder.cpp  1283.find-the-smallest-divisor-given-a-threshold.cpp  1286.iterator-for-combination.cpp  1291.sequential-digits.cpp  1309.decrypt-string-from-alphabet-to-integer-mapping.c  1331.rank-transform-of-an-array.cpp  1332.remove-palindromic-subsequences.cpp  134.gas-station.c  1344.angle-between-hands-of-a-clock.c  (+159 more)
go/: 1451.rearrange-words-in-a-sentence.go  165.compare-version-numbers.go  205.isomorphic-strings.go  290.word-pattern.go  71.simplify-path.go  819.most-common-word.go
header/: cheader.h  cppheader.h  header.h
lcci/: 01.01.is-unique-lcci.c  01.05.one-away-lcci.c  02.04.partition-list-lcci.c  03.02.min-stack-lcci.cpp  03.03.stack-of-plates-lcci.cpp  03.06.animal-shelter-lcci.c  04.01.route-between-nodes-lcci.cpp  05.02.bianry-number-to-string-lcci.cpp  08.09.bracket-lcci.c  10.02.group-anagrams-lcci.cpp  17.11.find-closest-lcci.c  17.14.smallest-k-lcci.cpp  17.18.shortest-supersequence-lcci.cpp
lcof/: 35.fu-za-lian-biao-de-fu-zhi-lcof.cpp  42.lian-xu-zi-shu-zu-de-zui-da-he-lcof.c
