cmake_minimum_required(VERSION 3.11)
project(leetcode)

set(CMAKE_C_STANDARD 99)
set(CMAKE_CXX_STANDARD 14)

#add_compile_options(-Wall)
link_libraries(m)
# add_compile_options(-fsanitize=address -fno-omit-frame-pointer)

# 暂时注释，加快编译速度
#add_executable(leetcode main.c header.h)
#add_executable(143.reorder-list 143.reorder-list.c)
#add_executable(35.fu-za-lian-biao-de-fu-zhi-lcof lcof/35.fu-za-lian-biao-de-fu-zhi-lcof.cpp)
#add_executable(430.flatten-a-multilevel-doubly-linked-list 430.flatten-a-multilevel-doubly-linked-list.cpp)
#add_executable(925.long-pressed-name 925.long-pressed-name.c)
#add_executable(1171.remove-zero-sum-consecutive-nodes-from-linked-list 1171.remove-zero-sum-consecutive-nodes-from-linked-list.cpp)
#add_executable(725.split-linked-list-in-parts 725.split-linked-list-in-parts.cpp)
#add_executable(763.partition-labels 763.partition-labels.c)
#add_executable(02.04.partition-list-lcci lcci/02.04.partition-list-lcci.c)
#add_executable(148.sort-list 148.sort-list.c)
#add_executable(817.linked-list-components 817.linked-list-components.cpp)
#add_executable(1019.next-greater-node-in-linked-list 1019.next-greater-node-in-linked-list.cpp)
#add_executable(80.remove-duplicates-from-sorted-array-ii 80.remove-duplicates-from-sorted-array-ii.c)
#add_executable(17.11.find-closest-lcci lcci/17.11.find-closest-lcci.c)
#add_executable(75.sort-colors 75.sort-colors.c)
#add_executable(844.backspace-string-compare 844.backspace-string-compare.c)
#add_executable(1170.compare-strings-by-frequency-of-the-smallest-character 1170.compare-strings-by-frequency-of-the-smallest-character.c)
#add_executable(1614.maximum-nesting-depth-of-the-parentheses 1614.maximum-nesting-depth-of-the-parentheses.cpp)
#add_executable(657.robot-return-to-origin 657.robot-return-to-origin.c)
#add_executable(1309.decrypt-string-from-alphabet-to-integer-mapping 1309.decrypt-string-from-alphabet-to-integer-mapping.c)
#add_executable(1370.increasing-decreasing-string 1370.increasing-decreasing-string.c)
#add_executable(1576.replace-all-s-to-avoid-consecutive-repeating-characters 1576.replace-all-s-to-avoid-consecutive-repeating-characters.c)
#add_executable(1249.minimum-remove-to-make-valid-parentheses 1249.minimum-remove-to-make-valid-parentheses.cpp)
#add_executable(1347.minimum-number-of-steps-to-make-two-strings-anagram 1347.minimum-number-of-steps-to-make-two-strings-anagram.c)
#add_executable(890.find-and-replace-pattern 890.find-and-replace-pattern.cpp)
#add_executable(381.insert-delete-getrandom-o1-duplicates-allowed 381.insert-delete-getrandom-o1-duplicates-allowed.cpp)
#add_executable(08.09.bracket-lcci lcci/08.09.bracket-lcci.c)
#add_executable(893.groups-of-special-equivalent-strings 893.groups-of-special-equivalent-strings.cpp)
#add_executable(140.word-break-ii 140.word-break-ii.cpp)
#add_executable(139.word-break 139.word-break.cpp)
#add_executable(537.complex-number-multiplication 537.complex-number-multiplication.cpp)
#add_executable(791.custom-sort-string 791.custom-sort-string.cpp)
#add_executable(10.02.group-anagrams-lcci lcci/10.02.group-anagrams-lcci.cpp)
#add_executable(1189.maximum-number-of-balloons 1189.maximum-number-of-balloons.cpp)
#add_executable(349.intersection-of-two-arrays 349.intersection-of-two-arrays.cpp)
#add_executable(1455.check-if-a-word-occurs-as-a-prefix-of-any-word-in-a-sentence 1455.check-if-a-word-occurs-as-a-prefix-of-any-word-in-a-sentence.c)
#add_executable(1624.largest-substring-between-two-equal-characters 1624.largest-substring-between-two-equal-characters.c)
#add_executable(1023.camelcase-matching 1023.camelcase-matching.c)
#add_executable(1268.search-suggestions-system 1268.search-suggestions-system.cpp)
#add_executable(1422.maximum-score-after-splitting-a-string 1422.maximum-score-after-splitting-a-string.c)
#add_executable(1496.path-crossing 1496.path-crossing.cpp)
#add_executable(1106.parsing-a-boolean-expression 1106.parsing-a-boolean-expression.cpp)
#add_executable(383.ransom-note 383.ransom-note.c)
#add_executable(1138.alphabet-board-path 1138.alphabet-board-path.c)
#add_executable(1507.reformat-date 1507.reformat-date.cpp)
#add_executable(57.insert-interval 57.insert-interval.cpp)
#add_executable(1446.consecutive-characters 1446.consecutive-characters.c)
#add_executable(127.word-ladder 127.word-ladder.cpp)
#add_executable(1585.check-if-string-is-transformable-with-substring-sort-operations 1585.check-if-string-is-transformable-with-substring-sort-operations.cpp)
#add_executable(1078.occurrences-after-bigram 1078.occurrences-after-bigram.cpp)
#add_executable(126.word-ladder-ii 126.word-ladder-ii.cpp)
#add_executable(433.minimum-genetic-mutation 433.minimum-genetic-mutation.cpp)
#add_executable(1598.crawler-log-folder 1598.crawler-log-folder.cpp)
#add_executable(1332.remove-palindromic-subsequences 1332.remove-palindromic-subsequences.cpp)
#add_executable(1512.number-of-good-pairs 1512.number-of-good-pairs.cpp)
#add_executable(1344.angle-between-hands-of-a-clock 1344.angle-between-hands-of-a-clock.c)
#add_executable(1122.relative-sort-array 1122.relative-sort-array.c)
#add_executable(1636.sort-array-by-increasing-frequency 1636.sort-array-by-increasing-frequency.cpp)
#add_executable(134.gas-station 134.gas-station.c)
#add_executable(1557.minimum-number-of-vertices-to-reach-all-nodes 1557.minimum-number-of-vertices-to-reach-all-nodes.cpp)
add_executable(564.find-the-closest-palindrome 564.find-the-closest-palindrome.c)
add_executable(450.delete-node-in-a-bst 450.delete-node-in-a-bst.c)
add_executable(1622.fancy-sequence 1622.fancy-sequence.cpp)
add_executable(1491.average-salary-excluding-the-minimum-and-maximum-salary 1491.average-salary-excluding-the-minimum-and-maximum-salary.c)
add_executable(724.find-pivot-index 724.find-pivot-index.c)
add_executable(307.range-sum-query-mutable 307.range-sum-query-mutable.c)