cmake_minimum_required(VERSION 3.11)
project(leetcode)

set(CMAKE_C_STANDARD 99)
set(CMAKE_CXX_STANDARD 14)

#add_compile_options(-Wall)
link_libraries(m)
add_compile_definitions(__LOCAL__)
# add_compile_options(-fsanitize=address -fno-omit-frame-pointer)
include_directories("./header")

# 暂时注释，加快编译速度
add_executable(cmain main.c)
add_executable(cppmain main.cpp)
#add_executable(143.reorder-list 143.reorder-list.c)
#add_executable(35.fu-za-lian-biao-de-fu-zhi-lcof lcof/35.fu-za-lian-biao-de-fu-zhi-lcof.cpp)
#add_executable(430.flatten-a-multilevel-doubly-linked-list 430.flatten-a-multilevel-doubly-linked-list.cpp)
#add_executable(925.long-pressed-name 925.long-pressed-name.c)
#add_executable(1171.remove-zero-sum-consecutive-nodes-from-linked-list 1171.remove-zero-sum-consecutive-nodes-from-linked-list.cpp)
#add_executable(725.split-linked-list-in-parts 725.split-linked-list-in-parts.cpp)
#add_executable(763.partition-labels 763.partition-labels.c)
#add_executable(02.04.partition-list-lcci lcci/02.04.partition-list-lcci.c)
#add_executable(148.sort-list 148.sort-list.c)
#add_executable(817.linked-list-components 817.linked-list-components.cpp)
#add_executable(1019.next-greater-node-in-linked-list 1019.next-greater-node-in-linked-list.cpp)
#add_executable(80.remove-duplicates-from-sorted-array-ii 80.remove-duplicates-from-sorted-array-ii.c)
#add_executable(17.11.find-closest-lcci lcci/17.11.find-closest-lcci.c)
#add_executable(75.sort-colors 75.sort-colors.c)
#add_executable(844.backspace-string-compare 844.backspace-string-compare.c)
#add_executable(1170.compare-strings-by-frequency-of-the-smallest-character 1170.compare-strings-by-frequency-of-the-smallest-character.c)
#add_executable(1614.maximum-nesting-depth-of-the-parentheses 1614.maximum-nesting-depth-of-the-parentheses.cpp)
#add_executable(657.robot-return-to-origin 657.robot-return-to-origin.c)
#add_executable(1309.decrypt-string-from-alphabet-to-integer-mapping 1309.decrypt-string-from-alphabet-to-integer-mapping.c)
#add_executable(1370.increasing-decreasing-string 1370.increasing-decreasing-string.c)
#add_executable(1576.replace-all-s-to-avoid-consecutive-repeating-characters 1576.replace-all-s-to-avoid-consecutive-repeating-characters.c)
#add_executable(1249.minimum-remove-to-make-valid-parentheses 1249.minimum-remove-to-make-valid-parentheses.cpp)
#add_executable(1347.minimum-number-of-steps-to-make-two-strings-anagram 1347.minimum-number-of-steps-to-make-two-strings-anagram.c)
#add_executable(890.find-and-replace-pattern 890.find-and-replace-pattern.cpp)
#add_executable(381.insert-delete-getrandom-o1-duplicates-allowed 381.insert-delete-getrandom-o1-duplicates-allowed.cpp)
#add_executable(08.09.bracket-lcci lcci/08.09.bracket-lcci.c)
#add_executable(893.groups-of-special-equivalent-strings 893.groups-of-special-equivalent-strings.cpp)
#add_executable(140.word-break-ii 140.word-break-ii.cpp)
#add_executable(139.word-break 139.word-break.cpp)
#add_executable(537.complex-number-multiplication 537.complex-number-multiplication.cpp)
#add_executable(791.custom-sort-string 791.custom-sort-string.cpp)
#add_executable(10.02.group-anagrams-lcci lcci/10.02.group-anagrams-lcci.cpp)
#add_executable(1189.maximum-number-of-balloons 1189.maximum-number-of-balloons.cpp)
#add_executable(349.intersection-of-two-arrays 349.intersection-of-two-arrays.cpp)
#add_executable(1455.check-if-a-word-occurs-as-a-prefix-of-any-word-in-a-sentence 1455.check-if-a-word-occurs-as-a-prefix-of-any-word-in-a-sentence.c)
#add_executable(1624.largest-substring-between-two-equal-characters 1624.largest-substring-between-two-equal-characters.c)
#add_executable(1023.camelcase-matching 1023.camelcase-matching.c)
#add_executable(1268.search-suggestions-system 1268.search-suggestions-system.cpp)
#add_executable(1422.maximum-score-after-splitting-a-string 1422.maximum-score-after-splitting-a-string.c)
#add_executable(1496.path-crossing 1496.path-crossing.cpp)
#add_executable(1106.parsing-a-boolean-expression 1106.parsing-a-boolean-expression.cpp)
#add_executable(383.ransom-note 383.ransom-note.c)
#add_executable(1138.alphabet-board-path 1138.alphabet-board-path.c)
#add_executable(1507.reformat-date 1507.reformat-date.cpp)
#add_executable(57.insert-interval 57.insert-interval.cpp)
#add_executable(1446.consecutive-characters 1446.consecutive-characters.c)
#add_executable(127.word-ladder 127.word-ladder.cpp)
#add_executable(1585.check-if-string-is-transformable-with-substring-sort-operations 1585.check-if-string-is-transformable-with-substring-sort-operations.cpp)
#add_executable(1078.occurrences-after-bigram 1078.occurrences-after-bigram.cpp)
#add_executable(126.word-ladder-ii 126.word-ladder-ii.cpp)
#add_executable(433.minimum-genetic-mutation 433.minimum-genetic-mutation.cpp)
#add_executable(1598.crawler-log-folder 1598.crawler-log-folder.cpp)
#add_executable(1332.remove-palindromic-subsequences 1332.remove-palindromic-subsequences.cpp)
#add_executable(1512.number-of-good-pairs 1512.number-of-good-pairs.cpp)
#add_executable(1344.angle-between-hands-of-a-clock 1344.angle-between-hands-of-a-clock.c)
#add_executable(1122.relative-sort-array 1122.relative-sort-array.c)
#add_executable(1636.sort-array-by-increasing-frequency 1636.sort-array-by-increasing-frequency.cpp)
#add_executable(134.gas-station 134.gas-station.c)
#add_executable(1557.minimum-number-of-vertices-to-reach-all-nodes 1557.minimum-number-of-vertices-to-reach-all-nodes.cpp)
#add_executable(564.find-the-closest-palindrome 564.find-the-closest-palindrome.c)
#add_executable(450.delete-node-in-a-bst 450.delete-node-in-a-bst.c)
#add_executable(1622.fancy-sequence 1622.fancy-sequence.cpp)
#add_executable(1491.average-salary-excluding-the-minimum-and-maximum-salary 1491.average-salary-excluding-the-minimum-and-maximum-salary.c)
#add_executable(724.find-pivot-index 724.find-pivot-index.c)
#add_executable(307.range-sum-query-mutable 307.range-sum-query-mutable.c)
#add_executable(304.range-sum-query-2d-immutable 304.range-sum-query-2d-immutable.c)
#add_executable(242.valid-anagram 242.valid-anagram.c)
#add_executable(49.group-anagrams 49.group-anagrams.cpp)
#add_executable(438.find-all-anagrams-in-a-string 438.find-all-anagrams-in-a-string.cpp)
#add_executable(165.compare-version-numbers 165.compare-version-numbers.c)
#add_executable(452.minimum-number-of-arrows-to-burst-balloons 452.minimum-number-of-arrows-to-burst-balloons.c)
#add_executable(1525.number-of-good-ways-to-split-a-string 1525.number-of-good-ways-to-split-a-string.cpp)
#add_executable(222.count-complete-tree-nodes 222.count-complete-tree-nodes.c)
#add_executable(1261.find-elements-in-a-contaminated-binary-tree 1261.find-elements-in-a-contaminated-binary-tree.cpp)
#add_executable(121.best-time-to-buy-and-sell-stock 121.best-time-to-buy-and-sell-stock.c)
#add_executable(962.maximum-width-ramp 962.maximum-width-ramp.c)
#add_executable(179.largest-number 179.largest-number.c)
#add_executable(263.ugly-number 263.ugly-number.c)
#add_executable(264.ugly-number-ii 264.ugly-number-ii.c)
#add_executable(01.01.is-unique-lcci lcci/01.01.is-unique-lcci.c)
#add_executable(575.distribute-candies 575.distribute-candies.cpp)
#add_executable(332.reconstruct-itinerary 332.reconstruct-itinerary.cpp)
add_executable(795.number-of-subarrays-with-bounded-maximum 795.number-of-subarrays-with-bounded-maximum.c)
add_executable(17.14.smallest-k-lcci lcci/17.14.smallest-k-lcci.cpp)
add_executable(164.maximum-gap 164.maximum-gap.c)
add_executable(605.can-place-flowers 605.can-place-flowers.c)
add_executable(797.all-paths-from-source-to-target 797.all-paths-from-source-to-target.cpp)
add_executable(1387.sort-integers-by-the-power-value 1387.sort-integers-by-the-power-value.cpp)
add_executable(841.keys-and-rooms 841.keys-and-rooms.cpp)
add_executable(1267.count-servers-that-communicate 1267.count-servers-that-communicate.cpp)
add_executable(04.01.route-between-nodes-lcci lcci/04.01.route-between-nodes-lcci.cpp)
add_executable(743.network-delay-time 743.network-delay-time.cpp)
add_executable(116.populating-next-right-pointers-in-each-node 116.populating-next-right-pointers-in-each-node.cpp)
add_executable(117.populating-next-right-pointers-in-each-node-ii 117.populating-next-right-pointers-in-each-node-ii.cpp)
add_executable(199.binary-tree-right-side-view 199.binary-tree-right-side-view.cpp)
add_executable(1161.maximum-level-sum-of-a-binary-tree 1161.maximum-level-sum-of-a-binary-tree.cpp)
add_executable(863.all-nodes-distance-k-in-binary-tree 863.all-nodes-distance-k-in-binary-tree.cpp)
add_executable(767.reorganize-string 767.reorganize-string.c)
add_executable(648.replace-words 648.replace-words.c)
add_executable(402.remove-k-digits 402.remove-k-digits.c)
add_executable(738.monotone-increasing-digits 738.monotone-increasing-digits.c)
add_executable(670.maximum-swap 670.maximum-swap.c)
add_executable(814.binary-tree-pruning 814.binary-tree-pruning.c)
add_executable(42.lian-xu-zi-shu-zu-de-zui-da-he-lcof lcof/42.lian-xu-zi-shu-zu-de-zui-da-he-lcof.c)
add_executable(1588.sum-of-all-odd-length-subarrays 1588.sum-of-all-odd-length-subarrays.c)
add_executable(1361.validate-binary-tree-nodes 1361.validate-binary-tree-nodes.c)
add_executable(1184.distance-between-bus-stops 1184.distance-between-bus-stops.c)
add_executable(1609.even-odd-tree 1609.even-odd-tree.cpp)
add_executable(1437.check-if-all-1s-are-at-least-length-k-places-away 1437.check-if-all-1s-are-at-least-length-k-places-away.c)
add_executable(463.island-perimeter 463.island-perimeter.c)
add_executable(733.flood-fill 733.flood-fill.cpp)
add_executable(1400.construct-k-palindrome-strings 1400.construct-k-palindrome-strings.c)
add_executable(1603.design-parking-system 1603.design-parking-system.cpp)
add_executable(1656.design-an-ordered-stream 1656.design-an-ordered-stream.cpp)
add_executable(173.binary-search-tree-iterator 173.binary-search-tree-iterator.cpp)
add_executable(341.flatten-nested-list-iterator 341.flatten-nested-list-iterator.cpp)
add_executable(1286.iterator-for-combination 1286.iterator-for-combination.cpp)
add_executable(03.06.animal-shelter-lcci lcci/03.06.animal-shelter-lcci.c)
add_executable(1670.design-front-middle-back-queue 1670.design-front-middle-back-queue.c)
add_executable(1600.throne-inheritance 1600.throne-inheritance.cpp)