cmake_minimum_required(VERSION 3.11)
project(leetcode)

set(CMAKE_C_STANDARD 99)
set(CMAKE_CXX_STANDARD 14)

#add_compile_options(-Wall)
link_libraries(m)
add_compile_definitions(__LOCAL__)
# add_compile_options(-fsanitize=address -fno-omit-frame-pointer)
include_directories("./header")

# 暂时注释，加快编译速度
add_executable(cmain main.c)
add_executable(cppmain main.cpp)
#add_executable(143.reorder-list 143.reorder-list.c)
#add_executable(35.fu-za-lian-biao-de-fu-zhi-lcof lcof/35.fu-za-lian-biao-de-fu-zhi-lcof.cpp)
#add_executable(430.flatten-a-multilevel-doubly-linked-list 430.flatten-a-multilevel-doubly-linked-list.cpp)
#add_executable(925.long-pressed-name 925.long-pressed-name.c)
#add_executable(1171.remove-zero-sum-consecutive-nodes-from-linked-list 1171.remove-zero-sum-consecutive-nodes-from-linked-list.cpp)
#add_executable(725.split-linked-list-in-parts 725.split-linked-list-in-parts.cpp)
#add_executable(763.partition-labels 763.partition-labels.c)
#add_executable(02.04.partition-list-lcci lcci/02.04.partition-list-lcci.c)
#add_executable(148.sort-list 148.sort-list.c)
#add_executable(817.linked-list-components 817.linked-list-components.cpp)
#add_executable(1019.next-greater-node-in-linked-list 1019.next-greater-node-in-linked-list.cpp)
#add_executable(80.remove-duplicates-from-sorted-array-ii 80.remove-duplicates-from-sorted-array-ii.c)
#add_executable(17.11.find-closest-lcci lcci/17.11.find-closest-lcci.c)
#add_executable(75.sort-colors 75.sort-colors.c)
#add_executable(844.backspace-string-compare 844.backspace-string-compare.c)
#add_executable(1170.compare-strings-by-frequency-of-the-smallest-character 1170.compare-strings-by-frequency-of-the-smallest-character.c)
#add_executable(1614.maximum-nesting-depth-of-the-parentheses 1614.maximum-nesting-depth-of-the-parentheses.cpp)
#add_executable(657.robot-return-to-origin 657.robot-return-to-origin.c)
#add_executable(1309.decrypt-string-from-alphabet-to-integer-mapping 1309.decrypt-string-from-alphabet-to-integer-mapping.c)
#add_executable(1370.increasing-decreasing-string 1370.increasing-decreasing-string.c)
#add_executable(1576.replace-all-s-to-avoid-consecutive-repeating-characters 1576.replace-all-s-to-avoid-consecutive-repeating-characters.c)
#add_executable(1249.minimum-remove-to-make-valid-parentheses 1249.minimum-remove-to-make-valid-parentheses.cpp)
#add_executable(1347.minimum-number-of-steps-to-make-two-strings-anagram 1347.minimum-number-of-steps-to-make-two-strings-anagram.c)
#add_executable(890.find-and-replace-pattern 890.find-and-replace-pattern.cpp)
#add_executable(381.insert-delete-getrandom-o1-duplicates-allowed 381.insert-delete-getrandom-o1-duplicates-allowed.cpp)
#add_executable(08.09.bracket-lcci lcci/08.09.bracket-lcci.c)
#add_executable(893.groups-of-special-equivalent-strings 893.groups-of-special-equivalent-strings.cpp)
#add_executable(140.word-break-ii 140.word-break-ii.cpp)
#add_executable(139.word-break 139.word-break.cpp)
#add_executable(537.complex-number-multiplication 537.complex-number-multiplication.cpp)
#add_executable(791.custom-sort-string 791.custom-sort-string.cpp)
#add_executable(10.02.group-anagrams-lcci lcci/10.02.group-anagrams-lcci.cpp)
#add_executable(1189.maximum-number-of-balloons 1189.maximum-number-of-balloons.cpp)
#add_executable(349.intersection-of-two-arrays 349.intersection-of-two-arrays.cpp)
#add_executable(1455.check-if-a-word-occurs-as-a-prefix-of-any-word-in-a-sentence 1455.check-if-a-word-occurs-as-a-prefix-of-any-word-in-a-sentence.c)
#add_executable(1624.largest-substring-between-two-equal-characters 1624.largest-substring-between-two-equal-characters.c)
#add_executable(1023.camelcase-matching 1023.camelcase-matching.c)
#add_executable(1268.search-suggestions-system 1268.search-suggestions-system.cpp)
#add_executable(1422.maximum-score-after-splitting-a-string 1422.maximum-score-after-splitting-a-string.c)
#add_executable(1496.path-crossing 1496.path-crossing.cpp)
#add_executable(1106.parsing-a-boolean-expression 1106.parsing-a-boolean-expression.cpp)
#add_executable(383.ransom-note 383.ransom-note.c)
#add_executable(1138.alphabet-board-path 1138.alphabet-board-path.c)
#add_executable(1507.reformat-date 1507.reformat-date.cpp)
#add_executable(57.insert-interval 57.insert-interval.cpp)
#add_executable(1446.consecutive-characters 1446.consecutive-characters.c)
#add_executable(127.word-ladder 127.word-ladder.cpp)
#add_executable(1585.check-if-string-is-transformable-with-substring-sort-operations 1585.check-if-string-is-transformable-with-substring-sort-operations.cpp)
#add_executable(1078.occurrences-after-bigram 1078.occurrences-after-bigram.cpp)
#add_executable(126.word-ladder-ii 126.word-ladder-ii.cpp)
#add_executable(433.minimum-genetic-mutation 433.minimum-genetic-mutation.cpp)
#add_executable(1598.crawler-log-folder 1598.crawler-log-folder.cpp)
#add_executable(1332.remove-palindromic-subsequences 1332.remove-palindromic-subsequences.cpp)
#add_executable(1512.number-of-good-pairs 1512.number-of-good-pairs.cpp)
#add_executable(1344.angle-between-hands-of-a-clock 1344.angle-between-hands-of-a-clock.c)
#add_executable(1122.relative-sort-array 1122.relative-sort-array.c)
#add_executable(1636.sort-array-by-increasing-frequency 1636.sort-array-by-increasing-frequency.cpp)
#add_executable(134.gas-station 134.gas-station.c)
#add_executable(1557.minimum-number-of-vertices-to-reach-all-nodes 1557.minimum-number-of-vertices-to-reach-all-nodes.cpp)
#add_executable(564.find-the-closest-palindrome 564.find-the-closest-palindrome.c)
#add_executable(450.delete-node-in-a-bst 450.delete-node-in-a-bst.c)
#add_executable(1622.fancy-sequence 1622.fancy-sequence.cpp)
#add_executable(1491.average-salary-excluding-the-minimum-and-maximum-salary 1491.average-salary-excluding-the-minimum-and-maximum-salary.c)
#add_executable(724.find-pivot-index 724.find-pivot-index.c)
#add_executable(307.range-sum-query-mutable 307.range-sum-query-mutable.c)
#add_executable(304.range-sum-query-2d-immutable 304.range-sum-query-2d-immutable.c)
#add_executable(242.valid-anagram 242.valid-anagram.c)
#add_executable(49.group-anagrams 49.group-anagrams.cpp)
#add_executable(438.find-all-anagrams-in-a-string 438.find-all-anagrams-in-a-string.cpp)
#add_executable(165.compare-version-numbers 165.compare-version-numbers.c)
#add_executable(452.minimum-number-of-arrows-to-burst-balloons 452.minimum-number-of-arrows-to-burst-balloons.c)
#add_executable(1525.number-of-good-ways-to-split-a-string 1525.number-of-good-ways-to-split-a-string.cpp)
#add_executable(222.count-complete-tree-nodes 222.count-complete-tree-nodes.c)
#add_executable(1261.find-elements-in-a-contaminated-binary-tree 1261.find-elements-in-a-contaminated-binary-tree.cpp)
#add_executable(121.best-time-to-buy-and-sell-stock 121.best-time-to-buy-and-sell-stock.c)
#add_executable(962.maximum-width-ramp 962.maximum-width-ramp.c)
#add_executable(179.largest-number 179.largest-number.c)
#add_executable(263.ugly-number 263.ugly-number.c)
#add_executable(264.ugly-number-ii 264.ugly-number-ii.c)
#add_executable(01.01.is-unique-lcci lcci/01.01.is-unique-lcci.c)
#add_executable(575.distribute-candies 575.distribute-candies.cpp)
#add_executable(332.reconstruct-itinerary 332.reconstruct-itinerary.cpp)
#add_executable(795.number-of-subarrays-with-bounded-maximum 795.number-of-subarrays-with-bounded-maximum.c)
#add_executable(17.14.smallest-k-lcci lcci/17.14.smallest-k-lcci.cpp)
#add_executable(164.maximum-gap 164.maximum-gap.c)
#add_executable(605.can-place-flowers 605.can-place-flowers.c)
#add_executable(797.all-paths-from-source-to-target 797.all-paths-from-source-to-target.cpp)
#add_executable(1387.sort-integers-by-the-power-value 1387.sort-integers-by-the-power-value.cpp)
#add_executable(841.keys-and-rooms 841.keys-and-rooms.cpp)
#add_executable(1267.count-servers-that-communicate 1267.count-servers-that-communicate.cpp)
#add_executable(04.01.route-between-nodes-lcci lcci/04.01.route-between-nodes-lcci.cpp)
#add_executable(743.network-delay-time 743.network-delay-time.cpp)
#add_executable(116.populating-next-right-pointers-in-each-node 116.populating-next-right-pointers-in-each-node.cpp)
#add_executable(117.populating-next-right-pointers-in-each-node-ii 117.populating-next-right-pointers-in-each-node-ii.cpp)
#add_executable(199.binary-tree-right-side-view 199.binary-tree-right-side-view.cpp)
#add_executable(1161.maximum-level-sum-of-a-binary-tree 1161.maximum-level-sum-of-a-binary-tree.cpp)
#add_executable(863.all-nodes-distance-k-in-binary-tree 863.all-nodes-distance-k-in-binary-tree.cpp)
#add_executable(767.reorganize-string 767.reorganize-string.c)
#add_executable(648.replace-words 648.replace-words.c)
#add_executable(402.remove-k-digits 402.remove-k-digits.c)
#add_executable(738.monotone-increasing-digits 738.monotone-increasing-digits.c)
#add_executable(670.maximum-swap 670.maximum-swap.c)
#add_executable(814.binary-tree-pruning 814.binary-tree-pruning.c)
#add_executable(42.lian-xu-zi-shu-zu-de-zui-da-he-lcof lcof/42.lian-xu-zi-shu-zu-de-zui-da-he-lcof.c)
#add_executable(1588.sum-of-all-odd-length-subarrays 1588.sum-of-all-odd-length-subarrays.c)
#add_executable(1361.validate-binary-tree-nodes 1361.validate-binary-tree-nodes.c)
#add_executable(1184.distance-between-bus-stops 1184.distance-between-bus-stops.c)
#add_executable(1609.even-odd-tree 1609.even-odd-tree.cpp)
#add_executable(1437.check-if-all-1s-are-at-least-length-k-places-away 1437.check-if-all-1s-are-at-least-length-k-places-away.c)
#add_executable(463.island-perimeter 463.island-perimeter.c)
#add_executable(733.flood-fill 733.flood-fill.cpp)
#add_executable(1400.construct-k-palindrome-strings 1400.construct-k-palindrome-strings.c)
#add_executable(1603.design-parking-system 1603.design-parking-system.cpp)
#add_executable(1656.design-an-ordered-stream 1656.design-an-ordered-stream.cpp)
#add_executable(173.binary-search-tree-iterator 173.binary-search-tree-iterator.cpp)
#add_executable(341.flatten-nested-list-iterator 341.flatten-nested-list-iterator.cpp)
#add_executable(1286.iterator-for-combination 1286.iterator-for-combination.cpp)
#add_executable(03.06.animal-shelter-lcci lcci/03.06.animal-shelter-lcci.c)
#add_executable(1670.design-front-middle-back-queue 1670.design-front-middle-back-queue.c)
#add_executable(1600.throne-inheritance 1600.throne-inheritance.cpp)
#add_executable(703.kth-largest-element-in-a-stream 703.kth-largest-element-in-a-stream.cpp)
#add_executable(1678.goal-parser-interpretation 1678.goal-parser-interpretation.c)
#add_executable(169.majority-element 169.majority-element.c)
#add_executable(1089.duplicate-zeros 1089.duplicate-zeros.c)
#add_executable(1232.check-if-it-is-a-straight-line 1232.check-if-it-is-a-straight-line.c)
#add_executable(520.detect-capital 520.detect-capital.c)
#add_executable(951.flip-equivalent-binary-trees 951.flip-equivalent-binary-trees.c)
#add_executable(1404.number-of-steps-to-reduce-a-number-in-binary-representation-to-one 1404.number-of-steps-to-reduce-a-number-in-binary-representation-to-one.c)
#add_executable(1668.maximum-repeating-substring 1668.maximum-repeating-substring.c)
#add_executable(404.sum-of-left-leaves 404.sum-of-left-leaves.c)
#add_executable(278.first-bad-version 278.first-bad-version.c)
#add_executable(375.guess-number-higher-or-lower-ii 375.guess-number-higher-or-lower-ii.c)
#add_executable(1206.design-skiplist 1206.design-skiplist.c)
#add_executable(432.all-oone-data-structure 432.all-oone-data-structure.cpp)
#add_executable(649.dota2-senate 649.dota2-senate.c)
#add_executable(1410.html-entity-parser 1410.html-entity-parser.c)
#add_executable(949.largest-time-for-given-digits 949.largest-time-for-given-digits.cpp)
#add_executable(1590.make-sum-divisible-by-p 1590.make-sum-divisible-by-p.cpp)
#add_executable(599.minimum-index-sum-of-two-lists 599.minimum-index-sum-of-two-lists.cpp)
#add_executable(187.repeated-dna-sequences 187.repeated-dna-sequences.cpp)
#add_executable(1022.sum-of-root-to-leaf-binary-numbers 1022.sum-of-root-to-leaf-binary-numbers.c)
#add_executable(676.implement-magic-dictionary 676.implement-magic-dictionary.c)
#add_executable(720.longest-word-in-dictionary 720.longest-word-in-dictionary.c)
#add_executable(1646.get-maximum-in-generated-array 1646.get-maximum-in-generated-array.c)
#add_executable(257.binary-tree-paths 257.binary-tree-paths.cpp)
add_executable(460.lfu-cache 460.lfu-cache.cpp)
add_executable(1418.display-table-of-food-orders-in-a-restaurant 1418.display-table-of-food-orders-in-a-restaurant.cpp)
add_executable(389.find-the-difference 389.find-the-difference.c)
add_executable(189.rotate-array 189.rotate-array.cpp)
add_executable(809.expressive-words 809.expressive-words.c)
add_executable(1679.max-number-of-k-sum-pairs 1679.max-number-of-k-sum-pairs.cpp)
add_executable(322.coin-change 322.coin-change.c)
add_executable(334.increasing-triplet-subsequence 334.increasing-triplet-subsequence.c)
add_executable(678.valid-parenthesis-string 678.valid-parenthesis-string.cpp)
add_executable(748.shortest-completing-word 748.shortest-completing-word.cpp)
add_executable(524.longest-word-in-dictionary-through-deleting 524.longest-word-in-dictionary-through-deleting.cpp)
add_executable(506.relative-ranks 506.relative-ranks.cpp)
add_executable(03.03.stack-of-plates-lcci lcci/03.03.stack-of-plates-lcci.cpp)
add_executable(1348.tweet-counts-per-frequency 1348.tweet-counts-per-frequency.cpp)
add_executable(1046.last-stone-weight 1046.last-stone-weight.cpp)
add_executable(393.utf-8-validation 393.utf-8-validation.cpp)
add_executable(201.bitwise-and-of-numbers-range 201.bitwise-and-of-numbers-range.c)
add_executable(1233.remove-sub-folders-from-the-filesystem 1233.remove-sub-folders-from-the-filesystem.cpp)
add_executable(1475.final-prices-with-a-special-discount-in-a-shop 1475.final-prices-with-a-special-discount-in-a-shop.cpp)
add_executable(412.fizz-buzz 412.fizz-buzz.cpp)
add_executable(919.complete-binary-tree-inserter 919.complete-binary-tree-inserter.cpp)
add_executable(919.maximum-length-of-a-concatenated-string-with-unique-characters 919.maximum-length-of-a-concatenated-string-with-unique-characters.cpp)
add_executable(1331.rank-transform-of-an-array 1331.rank-transform-of-an-array.cpp)
add_executable(872.leaf-similar-trees 872.leaf-similar-trees.cpp)
add_executable(86.partition-list 86.partition-list.c)
add_executable(606.construct-string-from-binary-tree 606.construct-string-from-binary-tree.cpp)
add_executable(449.serialize-and-deserialize-bst 449.serialize-and-deserialize-bst.cpp)
add_executable(1002.find-common-characters 1002.find-common-characters.cpp)
add_executable(710.random-pick-with-blacklist 710.random-pick-with-blacklist.cpp)
add_executable(1550.three-consecutive-odds 1550.three-consecutive-odds.c)
add_executable(830.positions-of-large-groups 830.positions-of-large-groups.cpp)
add_executable(538.convert-bst-to-greater-tree 538.convert-bst-to-greater-tree.c)
add_executable(895.maximum-frequency-stack 895.maximum-frequency-stack.cpp)
add_executable(628.maximum-product-of-three-numbers 628.maximum-product-of-three-numbers.cpp)
add_executable(880.decoded-string-at-index 880.decoded-string-at-index.cpp)
add_executable(1146.snapshot-array 1146.snapshot-array.cpp)
add_executable(530.minimum-absolute-difference-in-bst 530.minimum-absolute-difference-in-bst.cpp)
add_executable(399.evaluate-division 399.evaluate-division.cpp)
add_executable(532.k-diff-pairs-in-an-array 532.k-diff-pairs-in-an-array.cpp)
add_executable(1523.count-odd-numbers-in-an-interval-range 1523.count-odd-numbers-in-an-interval-range.c)
add_executable(1109.corporate-flight-bookings 1109.corporate-flight-bookings.cpp)
add_executable(31.next-permutation 31.next-permutation.c)
add_executable(443.string-compression 443.string-compression.cpp)
add_executable(38.count-and-say 38.count-and-say.cpp)
add_executable(56.merge-intervals 56.merge-intervals.cpp)
add_executable(495.teemo-attacking 495.teemo-attacking.c)
add_executable(715.range-module 715.range-module.cpp)
add_executable(1466.reorder-routes-to-make-all-paths-lead-to-the-city-zero 1466.reorder-routes-to-make-all-paths-lead-to-the-city-zero.cpp)
add_executable(01.05.one-away-lcci lcci/01.05.one-away-lcci.c)
add_executable(547.number-of-provinces 547.number-of-provinces.cpp)
add_executable(567.permutation-in-string 567.permutation-in-string.cpp)
add_executable(1528.shuffle-string 1528.shuffle-string.cpp)
add_executable(1619.mean-of-array-after-removing-some-elements 1619.mean-of-array-after-removing-some-elements.cpp)
add_executable(1464.maximum-product-of-two-elements-in-an-array 1464.maximum-product-of-two-elements-in-an-array.cpp)
add_executable(476.number-complement 476.number-complement.cpp)
add_executable(LCP03.programmable-robot LCP03.programmable-robot.cpp)
add_executable(623.add-one-row-to-tree 623.add-one-row-to-tree.cpp)
add_executable(228.summary-ranges 228.summary-ranges.cpp)
add_executable(1456.maximum-number-of-vowels-in-a-substring-of-given-length 1456.maximum-number-of-vowels-in-a-substring-of-given-length.cpp)
add_executable(673.number-of-longest-increasing-subsequence 673.number-of-longest-increasing-subsequence.cpp)
add_executable(429.n-ary-tree-level-order-traversal 429.n-ary-tree-level-order-traversal.cpp)
add_executable(1688.count-of-matches-in-tournament 1688.count-of-matches-in-tournament.cpp)
add_executable(1518.water-bottles 1518.water-bottles.cpp)
add_executable(162.find-peak-element 162.find-peak-element.cpp)
add_executable(692.top-k-frequent-words 692.top-k-frequent-words.cpp)
add_executable(1018.binary-prefix-divisible-by-5 1018.binary-prefix-divisible-by-5.cpp)
add_executable(1684.count-the-number-of-consistent-strings 1684.count-the-number-of-consistent-strings.cpp)
add_executable(542.01-matrix 542.01-matrix.cpp)
add_executable(03.02.min-stack-lcci lcci/03.02.min-stack-lcci.cpp)
add_executable(17.12.binode-lcci. lcci/17.12.binode-lcci..cpp)
add_executable(419.battleships-in-a-board 419.battleships-in-a-board.cpp)